@@ -11,17 +11,6 @@
     </head>
     <body>
 
-    <ul class="menu hidden">
-        <li>
-            <!-- http://css-tricks.com/examples/IconFont/ -->
-            <a href=settings onclick="return false;">
-                <span class="menu_icon settings hidden"></span>
-            </a>
-            <a href=refresh onclick="return false;">
-                <span class="menu_icon refresh" id=refresh></span>
-            </a>
-        </li>
-    </ul>
     <div id=fm class=no-js>
     </div>
     <div id=keyspanel>
