@@ -108,6 +108,8 @@ with clicks on files.
 
 * Changed icons font from foundicons to fonteollo
 
+* Removed Octicons font.
+
 
 2012.12.12, Version 0.1.8
 
